<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ll" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	
	<LinearLayout android:id="@+id/buttonLayout"
		android:orientation="horizontal" android:paddingTop="5px"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		
		<Button android:id="@+id/clearButton" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/note_clear" />
			
			<Button android:id="@+id/deleteButton" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/note_delete" />
			
		<Button android:id="@+id/exitButton" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/note_close" />
			
	</LinearLayout>
	
</LinearLayout>
