<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:id="@+id/buttonLayout"
		android:orientation="horizontal" android:paddingTop="5px"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<Button android:id="@+id/camButton" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/note_camera" />

		<Button android:id="@+id/photoDelButton" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/note_delete" />

		<Button android:id="@+id/photoCloseButton" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/note_close" />

	</LinearLayout>

	<ImageView android:id="@+id/imageView" android:layout_width="fill_parent"
		android:layout_height="fill_parent" />

</LinearLayout>
