<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TabHost android:id="@+id/configTabHost" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1">
		<TabWidget android:id="@android:id/tabs"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<FrameLayout android:id="@android:id/tabcontent"
			android:layout_height="fill_parent" android:layout_width="fill_parent"
			android:paddingTop="66dip">
			<ScrollView android:id="@+id/configScrollView"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:scrollbarAlwaysDrawVerticalTrack="true">
				<LinearLayout android:id="@+id/configLayout"
					android:orientation="vertical" android:gravity="fill_horizontal"
					android:layout_width="fill_parent" android:layout_height="fill_parent">

				</LinearLayout>
			</ScrollView>
		</FrameLayout>
	</TabHost>

	<EditText android:id="@+id/usernameEdit" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:visibility="gone" />
	<EditText android:id="@+id/passwordEdit" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:visibility="gone" />
	<Button android:id="@+id/confirmLoginButton"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/login_confirm" android:visibility="gone" />


	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<ImageButton android:id="@+id/donateButton"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:src="@drawable/paypal" />

		<Button android:id="@+id/websiteButton" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:text="@string/help_site"
			android:layout_weight="1" />

		<Button android:id="@+id/closeButton" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:text="@string/go_back"
			android:layout_weight="1" />

	</LinearLayout>

</LinearLayout>
